# Mandelbrot-SIMD-and-GPU

./: .gitignore  CMakeLists.txt
perfs/: README.md
src/: CuteMode.cpp  CuteMode.hpp  Mandelbrot.cpp  Mandelbrot.hpp  kernel.cu  kernel.cuh  main.cpp
src/Color/: ColorLibrary.xxx  ColorMap.cpp  ColorMap.hpp  ColorUtils.hpp
src/Color/ColorGreyScale/: ColorGreyScale.cpp  ColorGreyScale.hpp
src/Color/ColorHSV/: ColorHSV.cpp  ColorHSV.hpp
src/Color/ColorHSVLoop/: ColorHSVLoop.cpp  ColorHSVLoop.hpp
src/Color/ColorHSVShifted/: ColorHSVShifted.cpp  ColorHSVShifted.hpp
src/Color/ColorLSD/: ColorLSD.cpp  ColorLSD.hpp
src/Color/ColorLerp/: ColorLerpBlueRed.cpp  ColorLerpBlueRed.hpp
src/Color/ColorSetCandy/: ColorSetCandy.cpp  ColorSetCandy.hpp
src/Color/ColorSmooth/: ColorSmooth.cpp  ColorSmooth.hpp
src/Color/ColorSmoothLoop/: ColorSmoothLoop.cpp  ColorSmoothLoop.hpp
src/Color/ColorSmoothShifted/: ColorSmoothShifted.cpp  ColorSmoothShifted.hpp
src/Color/ColorTest/: ColorTest.hpp
src/Color/ColorXaoS/: ColorXaoS.cpp  ColorXaoS.hpp
src/Convergence/: Convergence.cpp  Convergence.hpp
src/Convergence/double/avx2/multi/normal/: DP_AVX2_OMP.cpp
src/Convergence/double/avx2/multi/unroll_x2/: DP_AVX2_OMP_u2.cpp
src/Convergence/double/avx2/multi/unroll_x4/: DP_AVX2_OMP_u4.cpp
src/Convergence/double/avx512/mono/: DP_AVX512.cpp
src/Convergence/double/avx512/multi/: DP_AVX512_OMP.hpp
src/Convergence/double/sse4/mono/: DP_SSE4.cpp  DP_SSE4.hpp
src/Convergence/double/sse4/multi/: DP_SSE4_OMP.cpp
src/Convergence/double/x86/mono/: DP_x86.cpp
src/Convergence/double/x86/multi/: DP_x86_OMP.hpp
src/Convergence/fixed/: Convergence_fp_x86_new_fractal_wow_amazing.hpp  fixed_point.hpp  readme.md
src/Convergence/fixed/sse4/: Convergence_fp_x86_omp_SSE2.hpp
src/Convergence/fixed/x86/mono/: Convergence_fp_x86.hpp  FP_Q16_11_x86.cpp  FP_Q16_11_x86.hpp  FP_Q18_14_x86.cpp  FP_Q18_14_x86.hpp  FP_Q32_27_x86.cpp  FP_Q32_27_x86.hpp
src/Convergence/fixed/x86/multi/: Convergence_fp_x86_omp.hpp
src/Convergence/julia/DP_x86_BS/: DP_x86_BS.cpp  DP_x86_BS.hpp
src/Convergence/julia/DP_x86_J10/: DP_x86_J10.hpp
src/Convergence/julia/DP_x86_J2/: DP_x86_J2.cpp  DP_x86_J2.hpp
src/Convergence/julia/DP_x86_J3/: DP_x86_J3.cpp  DP_x86_J3.hpp
src/Convergence/julia/DP_x86_J4/: DP_x86_J4.hpp
src/Convergence/julia/DP_x86_J5/: DP_x86_J5.hpp
src/Convergence/julia/DP_x86_J6/: DP_x86_J6.cpp  DP_x86_J6.hpp
src/Convergence/julia/DP_x86_J7/: DP_x86_J7.hpp
src/Convergence/julia/DP_x86_J8/: DP_x86_J8.hpp
src/Convergence/julia/DP_x86_J9/: DP_x86_J9.hpp
src/Convergence/julia/double/DP_x86_J10/: DP_x86_J10.cpp  DP_x86_J10.hpp
src/Convergence/julia/double/DP_x86_J2/: DP_x86_J2.cpp  DP_x86_J2.hpp
src/Convergence/julia/double/DP_x86_J3/: DP_x86_J3.cpp  DP_x86_J3.hpp
src/Convergence/julia/double/DP_x86_J4/: DP_x86_J4.cpp  DP_x86_J4.hpp
src/Convergence/julia/double/DP_x86_J5/: DP_x86_J5.cpp  DP_x86_J5.hpp
src/Convergence/julia/double/DP_x86_J6/: DP_x86_J6.cpp  DP_x86_J6.hpp
src/Convergence/julia/double/DP_x86_J7/: DP_x86_J7.cpp  DP_x86_J7.hpp
src/Convergence/julia/double/DP_x86_J8/: DP_x86_J8.cpp  DP_x86_J8.hpp
src/Convergence/julia/double/DP_x86_J9/: DP_x86_J9.cpp  DP_x86_J9.hpp
src/Convergence/julia/double/template/: DP_x86_Julia.cpp  DP_x86_Julia.hpp
src/Convergence/julia/simple/avx512/mono-julia/: JU_SP_AVX512.cpp  JU_SP_AVX512.hpp
src/Convergence/julia/simple/avx512/multi-julia/: JU_SP_AVX512_OMP.cpp  JU_SP_AVX512_OMP.hpp
src/Convergence/julia/simple/x86/julia-mono/: JU_SP_x86.cpp  JU_SP_x86.hpp
src/Convergence/mandelbrot/double/avx512/mono/: DP_AVX512.cpp  DP_AVX512.hpp
src/Convergence/mandelbrot/double/avx512/multi/: DP_AVX512_OMP.cpp  DP_AVX512_OMP.hpp
src/Convergence/mandelbrot/double/cuda/mono/: DP_cuda.cu  DP_cuda.hpp  mandelbrot_dp.cu
src/Convergence/mandelbrot/double/neon/mono/: DP_NEON.cpp  DP_NEON.hpp
src/Convergence/mandelbrot/fixed/: Convergence_fp_x86_new_fractal_wow_amazing.hpp  fixed_point.hpp
src/Convergence/mandelbrot/fixed/sse4/: Convergence_fp_x86_omp_SSE2.hpp
src/Convergence/others/DP_x86_BS/: DP_x86_BS.hpp
src/Convergence/others/DP_x86_J10/: DP_x86_J10.cpp  DP_x86_J10.hpp
src/Convergence/others/DP_x86_J2/: DP_x86_J2.hpp
src/Convergence/others/DP_x86_J4/: DP_x86_J4.cpp
src/Convergence/others/DP_x86_J5/: DP_x86_J5.cpp  DP_x86_J5.hpp
src/Convergence/others/DP_x86_J6/: DP_x86_J6.hpp
src/Convergence/others/DP_x86_J7/: DP_x86_J7.cpp
src/Convergence/others/DP_x86_J8/: DP_x86_J8.cpp  DP_x86_J8.hpp
src/Convergence/others/DP_x86_J9/: DP_x86_J9.cpp
src/Convergence/others/DP_x86_M/: DP_x86_M.cpp  DP_x86_M.hpp
src/Convergence/others/DP_x86_Mme/: DP_x86_Mme.cpp  DP_x86_Mme.hpp
src/Convergence/others/DP_x86_Mr/: DP_x86_Mr.cpp  DP_x86_Mr.hpp
src/Convergence/others/DP_x86_N/: DP_x86_N.cpp  DP_x86_N.hpp
src/Convergence/others/DP_x86_XXX/: DP_x86_XXX.cpp  DP_x86_XXX.hpp
src/Convergence/simple/FPGA/mono/: SP_FPGA.hpp
src/Convergence/simple/avx2/multi/: SP_AVX2_OMP.cpp  SP_AVX2_OMP.hpp  SP_AVX2_OMP_u2.cpp  SP_AVX2_OMP_u2.hpp
src/Convergence/simple/avx512/mono/: SP_AVX512.hpp
src/Convergence/simple/neon/mono/: SP_NEON.cpp
src/Convergence/simple/neon/multi/: SP_NEON_OMP.cpp
src/Convergence/simple/sse4/mono/: SP_SSE4.cpp  SP_SSE4_vc.cpp
src/Convergence/simple/sse4/multi/: SP_SSE4_OMP.cpp  SP_SSE4_OMP.hpp  SP_SSE4_OMP_vc.cpp
src/Convergence/simple/x86/mono/: SP_x86.cpp  SP_x86.hpp
src/Convergence/simple/x86/multi/: SP_x86_OMP.cpp  SP_x86_OMP.hpp
src/Utils/: FileHandler.cpp  FileHandler.hpp  Settings.cpp  Settings.hpp  StringUtils.cpp  StringUtils.hpp  Utils.cpp  Utils.hpp
(+73 files in other folders)
